<resources>
    <string name="app_name">Monster Lair</string>
    <string name="main_menu_licenses">Content Licenses</string>
    <string name="main_menu_libraries">Libraries</string>
    <string name="fragment_monsters">Monsters</string>
    <string name="fragment_hazards">Hazards</string>
    <string name="fragment_treasures">Treasures</string>
    <string name="fragment_encounters">Encounters</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_encounter_creator">Create Encounter</string>
    <string name="fragment_encounter_export">Export Encounter</string>
    <string name="fragment_licenses">Licenses</string>
    <string name="hazard_item_caption">%s \u2014 Level: %d</string>
    <string name="monster_item_caption">%s \u2014 Level: %d</string>
    <string name="monster_description">%s \u2014 %s</string>
    <string name="search">Search</string>
    <string name="level_range">Level Range</string>
    <string name="sort_by">Sort By</string>
    <string name="monster_level_range_values">Level Range: %d - %d</string>
    <string name="level_range_values">%d - %d</string>
    <string name="monster_sort_by_type">Type</string>
    <string name="monster_sort_by_level">Level</string>
    <string name="monster_sort_by_name">Name</string>
    <string name="character_level">Level</string>
    <string name="number_of_characters"># of Characters</string>
    <string name="notes">Notes</string>
    <string name="difficulty_trivial">Trivial</string>
    <string name="difficulty_low">Low</string>
    <string name="difficulty_moderate">Moderate</string>
    <string name="difficulty_severe">Severe</string>
    <string name="difficulty_extreme">Extreme</string>
    <string name="enter_valid_level"> Please enter a valid level between 1 and 20 </string>
    <string name="enter_valid_number">Please enter a valid player number</string>
    <string name="hazard_complexity_simple">Simple Hazard</string>
    <string name="hazard_complexity_complex">Complex Hazard</string>
    <string name="hazard_filter_all">All</string>
    <string name="hazard_filter_simple">Simple</string>
    <string name="hazard_filter_complex">Complex</string>
    <string name="role_low_lackey">Low-threat lackey</string>
    <string name="role_moderate_lackey">Low- or moderate-threat lackey</string>
    <string name="role_standard_lackey">Lackey or standard creature</string>
    <string name="role_standard_creature">Standard creature</string>
    <string name="role_low_boss">Standard creature or low-threat boss</string>
    <string name="role_moderate_boss">Low- or moderate-threat boss</string>
    <string name="role_severe_boss">Moderate- or severe-threat boss</string>
    <string name="role_extreme_boss">Severe- or extreme-threat boss</string>
    <string name="role_solo_boss">Extreme-threat solo boss</string>
    <string name="role_too_low">Too low for creation rules</string>
    <string name="role_too_high">Too high for creation rules</string>
    <string name="role_low_lackey_hazard">Low-threat lackey hazard</string>
    <string name="role_moderate_lackey_hazard">Low- or moderate-threat lackey hazard </string>
    <string name="role_standard_lackey_hazard">Lackey or standard hazard </string>
    <string name="role_standard_hazard">Standard hazard</string>
    <string name="role_low_boss_hazard">Standard or low-threat boss hazard</string>
    <string name="role_moderate_boss_hazard">Low- or moderate-threat boss hazard</string>
    <string name="role_severe_boss_hazard">Moderate- or severe-threat boss hazard</string>
    <string name="role_extreme_boss_hazard">Severe- or extreme-threat boss hazard</string>
    <string name="role_solo_boss_hazard">Extreme-threat solo boss hazard</string>
    <string name="monster_with_xp_item_caption">%s \u2014 Level: %d \u2014 XP: %d</string>
    <string name="hazard_with_xp_item_caption">%s hazard \u2014 Level: %d \u2014 XP: %d</string>
    <string name="encounter_monster_item_caption">XP: %d \u2014 %s</string>
    <string name="encounter_danger_caption">XP: %d \u2014 %s</string>
    <string name="no_dangers_encounter">Currently no monsters or hazards</string>
    <string name="export">Print</string>
    <string name="save_encounter">Save</string>
    <string name="create_encounter_button">Create</string>
    <string name="edit_encounter">Edit Encounter</string>
    <string name="random_encounter">Random</string>
    <string name="treasure_recommendation">Treasure for Level</string>
    <string name="encounter_budget_xp">XP: %d / %d</string>
    <string name="encounter_budget_difficulty">Current Difficulty: %s</string>
    <string name="create_encounter">Create Encounter</string>
    <string name="encounter_details_creator">Level: %d \u2014 Characters: %d \u2014 %s</string>
    <string name="encounter_details">Level: %d \u2014 Characters: %d \u2014 %s (%d XP) \u2014 Budget: %d XP</string>
    <string name="encounter_target_difficulty_label">Difficulty</string>
    <string name="label_encounter_data">Encounter Data</string>
    <string name="label_encounters">Saved Encounters</string>
    <string name="monster_count_decrement_description">Decrease count or remove monster</string>
    <string name="monster_count_increment_description">Increase monster count</string>
    <string name="scroll_down_description">Scroll down</string>
    <string name="scroll_up_description">Scroll up</string>
    <string name="encounter_print">Print</string>
    <string name="encounter_delete">Delete</string>
    <string name="hazard_complexity">Complexities</string>
    <string name="hazard_complexity_encounter_creator">Filter By Hazard Complexity</string>
    <string name="encounter_danger_added">%s added</string>
    <string name="encounter_name_hint">Encounter Name</string>
    <string name="encounter_name_placeholder">Encounter</string>
    <string name="within_budget">Include only dangers within budget</string>
    <string name="danger_filter_label">Danger Types</string>
    <string name="monster_type_aberration">Aberration</string>
    <string name="monster_type_animal">Animal</string>
    <string name="monster_type_astral">Astral</string>
    <string name="monster_type_beast">Beast</string>
    <string name="monster_type_celestial">Celestial</string>
    <string name="monster_type_construct">Construct</string>
    <string name="monster_type_dragon">Dragon</string>
    <string name="monster_type_elemental">Elemental</string>
    <string name="monster_type_ethereal">Ethereal</string>
    <string name="monster_type_fey">Fey</string>
    <string name="monster_type_fiend">Fiend</string>
    <string name="monster_type_fungus">Fungus</string>
    <string name="monster_type_giant">Giant</string>
    <string name="monster_type_humanoid">Humanoid</string>
    <string name="monster_type_monitor">Monitor</string>
    <string name="monster_type_ooze">Ooze</string>
    <string name="monster_type_plant">Plant</string>
    <string name="monster_type_spirit">Spirit</string>
    <string name="monster_type_undead">Undead</string>
    <string name="monster_type_none">None</string>
    <string name="label_filter_monster_types">Filter By Monster Type</string>
    <string name="danger_type_all">All Types</string>
    <string name="danger_type_monster">Monsters</string>
    <string name="danger_type_hazards">Hazards</string>
    <string name="random_encounter_title">Random Encounter Templates</string>
    <string name="random_encounter_boss_and_lackeys">Boss and Lackeys (Severe, 120 XP)</string>
    <string name="random_encounter_boss_and_lieutenant">Boss and Lieutenant (Severe, 120 XP)</string>
    <string name="random_encounter_elite_enemies">Elite Enemies (Severe, 120 XP)</string>
    <string name="random_encounter_lieutenant_and_lackeys">Lieutenant and Lackeys (Moderate, 80 XP)</string>
    <string name="random_encounter_mated_pair">Mated Pair (Moderate, 80 XP)</string>
    <string name="random_encounter_troop">Troop (Moderate, 80 XP)</string>
    <string name="random_encounter_mook_squad">Mook Squad (Low, 60 XP)</string>
    <string name="random_encounter_random">Completely Random</string>
    <string name="random_encounter_message">These templates pick randomly from the filtered monsters to create an encounter fitting the \"Quick Adventure Groups\" from the Gamemastery Guide by Paizo. They try to scale with the number of players, use the same family and type of monsters and keep the number of monsters used to a minimum to make the encounter easy to prep and thematically appropriate.</string>
    <string name="random_encounter_information">Info</string>
    <string name="random_encounter_information_title">How it works</string>
    <string name="random_encounter_template_error">Sorry, I could not create a random encounter. Maybe try to widen your filter choices.</string>
    <string name="custom_monster_hint">This is one of your custom monsters and has no Archive of Nethys entry.</string>
    <string name="custom_monster_create_title">Add Custom Monster</string>
    <string name="custom_monster_edit_title">Edit Custom Monster</string>
    <string name="custom_monster_create_name">Name</string>
    <string name="custom_monster_create_level">Level</string>
    <string name="custom_monster_create_family">Family</string>
    <string name="custom_monster_create_type">Type</string>
    <string name="custom_monster_create_button">Save</string>
    <string name="custom_monster_edit_button">Save</string>
    <string name="custom_monster_edit_button_option">Edit</string>
    <string name="custom_monster_delete_button">Delete</string>
    <string name="custom_monster_delete_title">Delete %s?</string>
    <string name="custom_monster_delete_message">Warning! \u2014 When you delete %s it will delete all encounters that include it.</string>
    <string name="custom_monster_create_wrong_level">Please enter a valid level between -1 and 25.</string>
    <string name="custom_monster_create_empty_name">Please enter a valid name.</string>
    <string name="custom_monster_create_empty_type">Please enter a valid type.</string>
    <string name="custom_monster_custom_traits">Enter custom traits, divide with space</string>
    <string name="custom_monster_save_confirmation">%s saved.</string>
    <string name="whats_new">What\'s new (%s)</string>
    <string name="whats_new_8">- Random Encounters now include templates from the GMG.\n- Custom monsters can now be added.\n- Added a dialog to display the treasure by level values from the Core Rulebook, adjusted for players.\n- Player number and level of encounters can now be adjusted\n- Revamp of the encounter and creator pages.</string>
    <string name="whats_new_10">- Added monsters from the Bestiary 2 and NPCs from the GMG (both under monsters). Hazards are updated as well. \n- Reversed encounter order, newest first.\n- Added small intro to the encounter creator</string>
    <string name="whats_new_11">- Redesigned the app a bit. Filters should be easier to access and are more powerful.\n- Added Proficiency Without Level variant rules, Weak and Elite templates and notes to the encounter creator. \n- Added the option to filter sources. \n- Added treasures, including items from the APG, and a small random treasure generator.\n\n I also reworked the way everything is stored. Let me know, if there is something wrong with your data.</string>
    <string name="whats_new_13">- Added all items from the Advanced Player\'s Guide</string>
    <string name="traits_select_label">Traits</string>
    <string name="rarity_label_singular">Rarity</string>
    <string name="alignments_select_hint_singular">Alignment</string>
    <string name="sizes_select_hint_singular">Size</string>
    <string name="done">Done</string>
    <string name="variant_rules_without_proficiency">Use \"Proficiency without Level\" variant rules</string>
</resources>