<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/creator_menu_random_encounter"
        android:icon="@drawable/ic_random"
        android:title="@string/random_encounter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/creator_menu_treasure_recommendation"
        android:icon="@drawable/ic_chest"
        android:title="@string/treasure_recommendation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/creator_menu_edit"
        app:showAsAction="never"
        android:title="@string/edit_encounter" />

    <item
        android:id="@+id/creator_menu_custom_monster"
        app:showAsAction="never"
        android:title="@string/custom_monster_create_title" />


</menu>