<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/encounters_fragment">

    <fragment
        android:id="@+id/monster_overview_fragment"
        android:name="de.enduni.monsterlair.monsters.MonsterFragment"
        android:label="@string/fragment_monsters"
        tools:layout="@layout/fragment_monster" />

    <fragment
        android:id="@+id/encounters_fragment"
        android:name="de.enduni.monsterlair.encounters.EncounterFragment"
        android:label="@string/fragment_encounters"
        tools:layout="@layout/fragment_encounters">

        <action
            android:id="@+id/export_encounter_action"
            app:destination="@id/encounterExportFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/hazard_fragment"
        android:name="de.enduni.monsterlair.hazards.HazardFragment"
        android:label="@string/fragment_hazards"
        tools:layout="@layout/fragment_hazards" />

    <fragment
        android:id="@+id/treasure_fragment"
        android:name="de.enduni.monsterlair.treasure.TreasureFragment"
        android:label="@string/fragment_treasures"
        tools:layout="@layout/fragment_treasure" />


    <fragment
        android:id="@+id/encounterExportFragment"
        android:name="de.enduni.monsterlair.encounters.export.EncounterExportFragment"
        android:label="@string/fragment_encounter_export">

        <argument
            android:name="encounter_name"
            android:defaultValue="Encounter"
            app:argType="string" />
        <argument
            android:name="encounter_page"
            android:defaultValue=" "
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/licenseFragment"
        android:name="de.enduni.monsterlair.LicenseFragment"
        android:label="@string/fragment_licenses">

        <argument
            android:name="page"
            android:defaultValue=" "
            app:argType="string" />

    </fragment>

    <action
        android:id="@+id/open_licenses_action"
        app:destination="@id/licenseFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />

</navigation>